--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li>CSS</li>
         <li>JavaScript</li>
         <li>CSS</li>
+        <li>JavaScrip2t</li>
     </ul>
     <a href="https://www.google.com" target="_blank">Visit Google</a>
 </body>
